# showcase_AI_in_logistic_and_production

./: README.md  pyproject.toml
app/: Start.py  components.py
app/pages/: 2_Chatbot.py  3_Forecasting.py  4_Dokumentenanalyse.py  5_Kundensegmentierung.py
